--- a/openlibrary/templates/books/edit/web.html
+++ b/openlibrary/templates/books/edit/web.html
@@ -75,7 +75,7 @@ $def with (work, prefix="")
 
 <script type="text/javascript">
 <!--
-    \$().ready(function() {
+    ol.q.push(function() {
         \$("#links").repeat({
             vars: {
                 prefix: "$prefix"
