--- a/openlibrary/templates/covers/add.html
+++ b/openlibrary/templates/covers/add.html
@@ -26,9 +26,9 @@ $if status:
 
 <script type="text/javascript">
 <!--
-\$().ready(carousels);
-\$().ready(function(){\$('#popcovers').jcarousel();});
-\$(function() {
+ol.q.push(carousels);
+ol.q.push(function(){\$('#popcovers').jcarousel();});
+ol.q.push(function() {
     parent.closeThrobber();
     \$("#form.addcover-form").submit(function(event) {
 
