--- a/openlibrary/templates/default_edit.html
+++ b/openlibrary/templates/default_edit.html
@@ -57,7 +57,7 @@ function swap(a, b) {
         b.value = t;
     }
 }
-\$().ready(function(){
+ol.q.push(function(){
     \$("textarea").css("height","60px");
     \$("td.inputrow input[type=text]").attr("style","width:200px;");
 });
