--- a/openlibrary/templates/history_framepage.html
+++ b/openlibrary/templates/history_framepage.html
@@ -39,8 +39,8 @@ $def with (page)
     <link href="/css/master.css?format=raw" rel="stylesheet" type="text/css" />
 
     <script type="text/javascript">
-        \$().ready(setupSearch);
-        \$().ready(linkbuttons);
+        ol.q.push(setupSearch);
+        ol.q.push(linkbuttons);
     </script>
 </head>
 
