--- a/openlibrary/templates/home/subject_carousel.html
+++ b/openlibrary/templates/home/subject_carousel.html
@@ -19,7 +19,7 @@ $def with(subject, title="", options=None, description="", delay=0, type="subjec
 </div>
 
 <script type="text/javascript">
-\$().ready(function() {
+ol.q.push(function() {
   var delay = $:(json_encode(delay));
   var options = $:(json_encode(options));
   var type = "$(type)";
