--- a/openlibrary/templates/libraries/index.html
+++ b/openlibrary/templates/libraries/index.html
@@ -84,7 +84,7 @@ $var title: $title
     <div class="clearfix"></div>
 <script type="text/javascript">
 <!--
-\$(function () {
+ol.q.push(function () {
     \$(".columns").columnize({columns: 3, balance: true});
     \$(".columns").each(function() {
         \$(this).find(".column:last").css("margin-right","0");
