--- a/openlibrary/templates/libraries/participating.html
+++ b/openlibrary/templates/libraries/participating.html
@@ -89,7 +89,7 @@ $var title: $title
     <div class="clearfix"></div>
 <script type="text/javascript">
 <!--
-\$(function () {
+ol.q.push(function () {
     \$(".columns").columnize({columns: 3, balance: true});
     \$(".columns .column:last").css("margin-right","0");
 });
