--- a/openlibrary/templates/lists/widget.html
+++ b/openlibrary/templates/lists/widget.html
@@ -526,7 +526,7 @@ $if ctx.user:
 
     }
 
-    \$().ready(function(){
+    ol.q.push(function(){
         setup_submit_event();
         setup_events();
         setup_dialog();
