--- a/openlibrary/templates/subjects.html
+++ b/openlibrary/templates/subjects.html
@@ -48,9 +48,9 @@ $ subject_list = [('subjects', 20), ('places', 20), ('people', 10), ('times', 10
 </div>
 
 <script type="text/javascript">
-<!--
-var page = new Subject($:json_encode(page));
-//-->
+ol.q.push(function () {
+    window.page = new Subject($:json_encode(page));
+} );
 </script>
 
 $:render_template("lib/covers", page)
@@ -110,7 +110,7 @@ function set_hash(data) {
     document.location.hash = hash;
 }
 
-\$().ready(function() {
+ol.q.push(function() {
     var _hash = parse_hash();
 
     if (_hash.ebooks === 'true') {
