--- a/openlibrary/templates/type/edition/edit.html
+++ b/openlibrary/templates/type/edition/edit.html
@@ -68,7 +68,7 @@ function add_row(name) {
     });
 }
 
-jQuery(function(\$) {
+q.push(function(\$) {
     \$("#table_toc button.plus").bind("click", function(e) {
         \$("div#log").append(this + "<br/>");
     });
