--- a/openlibrary/templates/type/list/view.html
+++ b/openlibrary/templates/type/list/view.html
@@ -46,7 +46,7 @@ $jsdef render_seed_count(seed_count):
 
 <script type="text/javascript">
 <!--
-\$().ready(function(){
+ol.q.push(function(){
     \$('ul#listResults li:last').css('border-bottom','1px dotted #ebebeb');
 });
 
