--- a/openlibrary/templates/work_search.html
+++ b/openlibrary/templates/work_search.html
@@ -80,7 +80,7 @@ function less(header) {
     }
     \$(facetEntry + ":not(:hidden)").slice(shown-facet_inc,shown).slideUp()
 }
-\$().ready(function(){
+ol.q.push(function(){
     \$(".header_bull").hide();
 });
 //-->
@@ -219,7 +219,7 @@ $ )
         <div class="shift">$commify(num_found) hit$("s" if num_found != 1 else "")</div>
         <script type="text/javascript">
         <!--
-            \$().ready(bookCovers);
+            ol.q.push(bookCovers);
         //-->
         </script>
         <div class="resultsContainer">
