--- a/openlibrary/plugins/theme/templates/theme/viewfile.html
+++ b/openlibrary/plugins/theme/templates/theme/viewfile.html
@@ -49,7 +49,7 @@ $def with (path, text, diff)
 </div>
 
 <script type="text/javascript">
-    \$(function() {
+    ol.q.push(function() {
        \$("#show-diff").click(function() {
            \$("#diff").toggle();
        });
