--- a/openlibrary/templates/account/email.html
+++ b/openlibrary/templates/account/email.html
@@ -9,8 +9,8 @@ $def with (email, form)
 </div>
 
 <script type="text/javascript">
-\$().ready(validateForms);
-\$().ready(validateEmail);
+ol.q.push(validateForms);
+ol.q.push(validateEmail);
 </script>
 
 <div id="contentBody">
