--- a/openlibrary/templates/account/notifications.html
+++ b/openlibrary/templates/account/notifications.html
@@ -56,5 +56,5 @@ $ updates = d.get('updates', 'no')
 
 
 <script type="text/javascript">
-    \$().ready(twitterOn);
+    ol.q.push(twitterOn);
 </script>
