--- a/openlibrary/templates/books/edit/addcover.html
+++ b/openlibrary/templates/books/edit/addcover.html
@@ -45,7 +45,7 @@ function submit_cover(response, status) {
     }
 }
 
-\$().ready(function() {
+ol.q.push(function() {
     //Forms();
 });
 \$(document).ready(function() {
