--- a/openlibrary/templates/books/edit/edition.html
+++ b/openlibrary/templates/books/edit/edition.html
@@ -65,7 +65,7 @@ $jsdef render_work_autocomplete_item(item):
     </div>
 
 <script type="text/javascript">
-\$(function() {
+ol.q.push(function() {
     \$("#languages").setup_multi_input_autocomplete(
         "input.language-autocomplete",
         render_language_field,
@@ -675,7 +675,7 @@ $if ctx.user and ctx.user.is_admin():
 
 <script type="text/javascript">
 <!--
-    \$().ready(function() {
+    ol.q.push(function() {
         function error(errordiv, input, message) {
             \$(errordiv).show().html(message);
             \$(input).focus();
