--- a/openlibrary/templates/books/edit/excerpts.html
+++ b/openlibrary/templates/books/edit/excerpts.html
@@ -97,7 +97,7 @@ $def with (work)
 
     <script type="text/javascript">
     <!--
-        \$().ready(function() {
+        ol.q.push(function() {
             function error(errordiv, input, message) {
                 \$(errordiv).show().html(message);
                 \$(input).focus();
