--- a/openlibrary/templates/covers/saved.html
+++ b/openlibrary/templates/covers/saved.html
@@ -4,7 +4,7 @@ $putctx("bodyid", "form")
 
 <script type="text/javascript">
 <!--
-\$().ready(function() {
+ol.q.push(function() {
     \$("#topNotice").hide();
     \$("#popClose").click(closePopup);
     parent.update_image("$(image and image.id)");
