--- a/openlibrary/templates/lib/edit_head.html
+++ b/openlibrary/templates/lib/edit_head.html
@@ -1,7 +1,7 @@
 $def with (page)
 
 <script type="text/javascript">
-\$().ready(function(){if(top.location != location){top.location.href = document.location.href;};});
+ol.q.push(function(){if(top.location != location){top.location.href = document.location.href;};});
 </script>
 
 <div id="editHead">
