--- a/openlibrary/templates/login.html
+++ b/openlibrary/templates/login.html
@@ -7,9 +7,9 @@ $var title: $("Log In")
 </div>
 
 <script type="text/javascript">
-  //\$().ready(passwordMask);
-  //\$().ready(validateForms);
-  //\$().ready(validateLogin);
+  //ol.q.push(passwordMask);
+  //ol.q.push(validateForms);
+  //ol.q.push(validateLogin);
 </script>
 
 <div id="contentBody">
