--- a/openlibrary/templates/site/head.html
+++ b/openlibrary/templates/site/head.html
@@ -23,7 +23,6 @@ $def with (page)
     <link href="/static/images/openlibrary-192x192.png" rel="icon" sizes="192x192" />
     <link href="/static/images/openlibrary-128x128.png" rel="icon" sizes="128x128" />
     <link href="$static_url('build/all.css')" rel="stylesheet" type="text/css" />
-    <link href="$static_url('build/all-js.css')" rel="stylesheet" type="text/css"/>
     $if "dev" in ctx.features:
         <link href="$static_url('build/dev.css')" rel="stylesheet" type="text/css"/>
 
@@ -31,32 +30,12 @@ $def with (page)
     <meta name="google-site-verification" content="vtXGm8q3UgP-f6qXTvQBo85uh3nmIYIotVqqdJDpyz4" />
     <meta http-equiv="X-UA-Compatible" content="chrome=1" /> <!-- Enable Chrome Frame for IE -->
     <meta name="alexaVerifyID" content="wJKlTRj1Z1OI4G-J0w9R-cWhJjw" /> <!-- Necessary for Alexa -->
-
-    $if 'v2' in page:
-        <script type="text/javascript" src="/static/js/jquery-1.11.0.min.js"></script>
-        <script type="text/javascript" src="/static/js/jquery-migrate-1.2.1.min.js"></script>
-        <script type="text/javascript" src="/static/js/slick-1.6.0.min.js"></script>
-    $else:
-        <script src="/static/js/jquery-1.3.2.min.js" type="text/javascript"></script>
-        <script src="/static/js/jquery-ui-1.7.2.min.js" type="text/javascript"></script>
-
-    <!-- Must be loaded after jquery -->
-    <script src="//archive.org/includes/analytics.js?v=0c15bbe" type="text/javascript"></script>
-    <script> <!-- anonymized analytics -->
-      window.addEventListener('DOMContentLoaded', function send_analytics_pageview() {
-        archive_analytics.send_pageview({});
-      });
+    <script type="text/javascript">
+    window.ol = {
+        q: [],
+        styles: []
+    };
+    // Register a JS-only stylesheet
+    ol.styles.push("$static_url('build/all-js.css')");
     </script>
-
-    <script src="$static_url('build/vendor.js')" type="text/javascript"></script>
-    <script src="$static_url('build/all.js')" type="text/javascript"></script>
-
-    $if query_param("_firebug") == "true":
-        <script type='text/javascript' src='http://getfirebug.com/releases/lite/1.2/firebug-lite-compressed.js'></script>
-
-    $if any([path in request.canonical_url for path in ['/account/create', '/books/add', '/edit', '/books']]):
-        <!-- Must be loaded in Sign Up and Add new Books page -->
-        <!-- Must be loaded for all edit pages having link /books/*/*/edit -->
-        <script src="https://www.google.com/recaptcha/api.js" async defer></script>
-
 $putctx("sent_head", True)
