--- a/openlibrary/templates/type/i18n/edit.html
+++ b/openlibrary/templates/type/i18n/edit.html
@@ -38,7 +38,7 @@ function add_key() {
 }
 
 
-\$().ready(function() {
+ol.q.push(function() {
     \$("#newkey").bind("keypress", function(e) {
         if (e.keyCode == 13) {
             \$("#button_addkey").click();
