--- a/openlibrary/plugins/theme/templates/theme/git.html
+++ b/openlibrary/plugins/theme/templates/theme/git.html
@@ -64,7 +64,7 @@ div.diff-file {
 </div>
 
 <script type="text/javascript">
-\$(function() {
+window.q.push(function() {
     \$("#expand_all").click(function() {
         \$(".diff").show();
     });
