--- a/openlibrary/templates/admin/index.html
+++ b/openlibrary/templates/admin/index.html
@@ -6,7 +6,7 @@ $ _x = ctx.setdefault('usergroup', 'admin')
 $:macros.Dashboard()
 $ stats = get_admin_stats()
 <script type="text/javascript">
-\$(function () {
+window.q.push(function () {
     var edits = $:json_encode(counts.human_edits.get_counts(80, True));
     var members = $:json_encode(counts.members.get_counts(80, True));
     plot_tooltip_graph(\$("#editgraph"), edits, "edit(s) on");
@@ -108,7 +108,7 @@ $ stats = get_admin_stats()
 
 
   <script type="text/javascript">
-    \$(function () {
+    \window.q.push(function () {
     plot_tooltip_graph (\$("#works_minigraph"), $:json_encode(counts.works.get_counts(150, True)), " works on ");
     plot_tooltip_graph (\$("#editions_minigraph"), $:json_encode(counts.editions.get_counts(150, True)), " editions on ");
     plot_tooltip_graph (\$("#covers_minigraph"), $:json_encode(counts.covers.get_counts(150, True)), " covers on ");
