--- a/openlibrary/templates/books/check.html
+++ b/openlibrary/templates/books/check.html
@@ -51,7 +51,7 @@ $var title: $_("Add a book")
 
 <script type="text/javascript">
 <!--
-\$(function() {
+window.q.push(function() {
     \$("#siteSearch a").click(function() {
         var li = \$(this).parents('li:first');
         \$("input#work").val("/works/" + li.attr("id"));
@@ -59,7 +59,7 @@ $var title: $_("Add a book")
     });
 });
 
-\$(function() {
+window.q.push(function() {
     \$("#bookAddCont").click(function() {
         \$("input#work").val("none-of-these");
         \$("form#addbook").submit();
