--- a/openlibrary/templates/books/edit.html
+++ b/openlibrary/templates/books/edit.html
@@ -8,16 +8,16 @@ $putctx("robots", "noindex,nofollow")
 <script type="text/javascript">
 <!--
 loadStyle('/static/build/books-edit.css');
-\$().ready(Tabs);
-\$().ready(function(){
+\window.q.push(Tabs);
+\window.q.push(function(){
     if(jQuery.support.opacity){
         \$("#tabsAddbook").tabs({fx:{opacity:'toggle'}});
     } else {
         \$("#tabsAddbook").tabs();
     };
 });
-\$().ready(boxPop);
-\$().ready(function(){\$("#coverPop").colorbox({inline:true, opacity:"0.5", href:"#addCover"});});
+window.q.push(boxPop);
+window.q.push(function(){\$("#coverPop").colorbox({inline:true, opacity:"0.5", href:"#addCover"});});
 
 function limitChars(textid, limit, infodiv) {
     var text = \$('#'+textid).val();
@@ -31,9 +31,9 @@ function limitChars(textid, limit, infodiv) {
         return true;
     }
 };
-\$().ready(function(){\$('#excerpt').keyup(function(){limitChars('excerpt', 2000, 'charLimit');});});
+window.q.push(function(){\$('#excerpt').keyup(function(){limitChars('excerpt', 2000, 'charLimit');});});
 
-\$().ready(function() {
+window.q.push(function() {
     var hash = document.location.hash || "#edition";
     var tab = hash.split("/")[0]
     var link = "#" + "link_" + tab.substr(1);
@@ -91,7 +91,7 @@ function limitChars(textid, limit, infodiv) {
 </div>
 
 <script type="text/javascript">
-\$(function() {
+window.q.push(function() {
     \$("#authors").setup_multi_input_autocomplete(
         "input.author-autocomplete",
         render_author,
