--- a/openlibrary/templates/account/password.html
+++ b/openlibrary/templates/account/password.html
@@ -10,8 +10,8 @@ $def with (form)
 </div>
 
 <script type="text/javascript">
-\$().ready(validateForms);
-\$().ready(validatePassword);
+window.q.push(validateForms);
+window.q.push(validatePassword);
 </script>
 
 <div id="contentBody">
