--- a/openlibrary/templates/books/carousel.html
+++ b/openlibrary/templates/books/carousel.html
@@ -1,7 +1,7 @@
 $def with (books, id="ol-carousel")
 
 <script type="text/javascript">
-\$(function() {
+window.q.push(function() {
     function load_covers(carousel, state) {
         for (var i = carousel.first; i <= carousel.last; i++) {
             if (carousel.has(i)) {
