--- a/openlibrary/templates/covers/manage.html
+++ b/openlibrary/templates/covers/manage.html
@@ -4,7 +4,7 @@ $putctx("bodyid", "form")
 $putctx('robots', 'noindex,nofollow')
 
 <script type="text/javascript">
-\$(function() {
+window.q.push(function() {
     \$(".column").sortable({
         connectWith: '.trash'
     });
@@ -16,7 +16,7 @@ $putctx('robots', 'noindex,nofollow')
 });
 </script>
 <script type="text/javascript">
-\$().ready(function(){
+window.q.push(function(){
     \$("#topNotice").hide();
 });
 </script>
