--- a/openlibrary/templates/lib/covers.html
+++ b/openlibrary/templates/lib/covers.html
@@ -31,13 +31,13 @@ function loadCoverCarousels(carousel, state) {
     });
 }
 
-\$().ready(function() {
+window.q.push(function() {
     page.renderCovers = render_page;
     page.displayCovers(0);
 });
 
-\$().ready(carousels);
-\$().ready(function() {
+window.q.push(carousels);
+window.q.push(function() {
     carouselSetup(loadCoverCarousels);
     \$('.jcarousel-next').attr('title','View the next editions').append('<h4 class="shift"><a href="#" onclick="return false;">View the next editions</a></h4>');
     \$('.jcarousel-prev').attr('title','View the previous editions').append('<h4 class="shift"><a href="#" onclick="return false;">View the previous editions</a></h4>');
