--- a/openlibrary/templates/lists/home.html
+++ b/openlibrary/templates/lists/home.html
@@ -8,7 +8,7 @@ $var title: Lists
 
 <script type="text/javascript">
 <!--
-\$().ready(function(){
+window.q.push(function(){
     \$('.listEntry:nth-child(3n)').after('<div class="clearfix"></div>').css('margin-right','0');
 });
 //-->
