--- a/openlibrary/templates/type/list/embed.html
+++ b/openlibrary/templates/type/list/embed.html
@@ -117,7 +117,7 @@ $def render_seed_count(seed_count):
 </div>
 
 <script type="text/javascript">
-\$(function() {
+window.q.push(function() {
     \$('a').not('.pagination a').attr('target','_blank');
 });
 </script>
