Add a lightweight OpenLibrary bootstrap code
To ensure we can load JS and CSS off the critical path while not
breaking the existing approach to inline scripting in OpenLibrary
we introduce a small lightweight library that should be loaded before
initialising the site.

We load this as part of the vendor build, with the intention that
all code inside build/all.js will be loaded asynchronously.

--- a/openlibrary/templates/books/edit.html
+++ b/openlibrary/templates/books/edit.html
@@ -6,7 +6,7 @@ $var title: $this_title
 $putctx("robots", "noindex,nofollow")
 
 <script type="text/javascript">
-loadStyle('/static/build/books-edit.css');
+ol.loadStyle('/static/build/books-edit.css');
 \$().ready(Tabs);
 \$().ready(function(){
     if(jQuery.support.opacity){
