--- a/static/css/page-subject.less
+++ b/static/css/page-subject.less
@@ -1,1 +1,30 @@
 /* new entry point for subject pages */
+@import (less) "less/colors.less";
+@import (less) "less/breakpoints.less";
+@import (less) "less/mixins.less";
+
+// Import all common components
+@import (less) "lib/helpers-common.less";
+@import (less) "common.less";
+@import (less) "v2.less";
+
+// Internet Archive bar
+@import (less) "components/page-banner.less";
+@import (less) "components/iaBar.less";
+@import (less) "components/buttonGhost.less";
+@import (less) "components/buttonBtn.less";
+
+// Header bar
+@import (less) "components/header-bar.less";
+
+// Tablet
+@media only screen and (min-width: @width-breakpoint-tablet) {
+  @import (less) "components/tablet/iaBar.less";
+  @import (less) "components/tablet/header-bar.less";
+}
+
+// Desktop
+@media all and ( min-width: @width-breakpoint-desktop ) {
+  @import (less) "components/desktop/iaBar.less";
+  @import (less) "components/desktop/header-bar.less";
+}
