Add footer component to stylesheet

--- a/static/css/page-subject.less
+++ b/static/css/page-subject.less
@@ -17,6 +17,9 @@
 // Header bar
 @import (less) "components/header-bar.less";
 
+// Footer
+@import (less) "components/footer.less";
+
 // Tablet
 @media only screen and (min-width: @width-breakpoint-tablet) {
   @import (less) "components/tablet/iaBar.less";
