Add chart component to page

--- a/static/css/page-subject.less
+++ b/static/css/page-subject.less
@@ -17,6 +17,9 @@
 // Header bar
 @import (less) "components/header-bar.less";
 
+// Chart
+@import (less) "components/chart.less";
+
 // Footer
 @import (less) "components/footer.less";
 
