--- a/openlibrary/templates/lib/covers.html
+++ b/openlibrary/templates/lib/covers.html
@@ -2,13 +2,8 @@ $def with (page, all_borrow=False)
 
 <script type="text/javascript">
 <!--
-page.displayCovers = function(pagenum) {
-    page.loadPage(pagenum, function(data) {
-        \$("#coversCarousel").empty().html(page.renderCovers(data));
-    });
-};
-
 function loadCoverCarousels(carousel, state) {
+    var page = window.page;
     if (!page.coverCarousel) {
         page.coverCarousel = carousel;
         page.coverCarousel.size(page.getPageCount());
@@ -31,13 +26,16 @@ function loadCoverCarousels(carousel, state) {
     });
 }
 
-\$().ready(function() {
+window.q.push( function () {
+    var page = window.page;
+    page.displayCovers = function(pagenum) {
+        page.loadPage(pagenum, function(data) {
+            \$("#coversCarousel").empty().html(page.renderCovers(data));
+        });
+    };
     page.renderCovers = render_page;
     page.displayCovers(0);
-});
-
-\$().ready(carousels);
-\$().ready(function() {
+    carousels();
     carouselSetup(loadCoverCarousels);
     \$('.jcarousel-next').attr('title','View the next editions').append('<h4 class="shift"><a href="#" onclick="return false;">View the next editions</a></h4>');
     \$('.jcarousel-prev').attr('title','View the previous editions').append('<h4 class="shift"><a href="#" onclick="return false;">View the previous editions</a></h4>');
