--- a/openlibrary/templates/lists/widget.html
+++ b/openlibrary/templates/lists/widget.html
@@ -526,7 +526,7 @@ $if ctx.user:
 
     }
 
-    \$().ready(function(){
+    window.q.push( function(){
         setup_submit_event();
         setup_events();
         setup_dialog();
@@ -548,6 +548,5 @@ $if ctx.user:
            \$('.book-progress-btn').text("saving...");
         });
 
-    });
-
+    } );
     </script>
