jquery ui is loaded on v2 pages
Even though it is not used on some of them (e.g. home pages)
It is needed for rendering dialogs which feature on most pages.

--- a/openlibrary/templates/site/footer.html
+++ b/openlibrary/templates/site/footer.html
@@ -15,6 +15,7 @@ $if bodyid == 'user' or 'admin':
     $if 'v2' in page:
         <script type="text/javascript" src="/static/js/jquery-1.11.0.min.js"></script>
         <script type="text/javascript" src="/static/js/jquery-migrate-1.2.1.min.js"></script>
+        <script type="text/javascript" src="$static_url('js/jquery-ui-1.12.1.min.js')" ></script>
         <script type="text/javascript" src="/static/js/slick-1.6.0.min.js"></script>
         <!-- Must be loaded after jquery -->
         <script src="//archive.org/includes/analytics.js?v=0c15bbe" type="text/javascript"></script>
