--- a/static/css/legacy.less
+++ b/static/css/legacy.less
@@ -870,6 +870,10 @@ div#content {
   &Head {
     max-width: 918px;
     padding: 20px;
+    // Reset h1 margin set in common.less
+    h1 {
+      margin: 0;
+    }
   }
   &History {
     position: absolute;
