Add sensible defaults for inputs

--- a/static/css/common.less
+++ b/static/css/common.less
@@ -44,6 +44,12 @@ p {
   color: @dark-grey;
   line-height: 1.5em;
 }
+input {
+  padding: 3px;
+  max-width: 100%;
+  font-size: 1em;
+  max-width: 475px;
+}
 hr {
   height: 1px;
   border: none;
