WIP: Add carousel styles to page

--- a/static/css/page-subject.less
+++ b/static/css/page-subject.less
@@ -17,6 +17,11 @@
 // Header bar
 @import (less) "components/header-bar.less";
 
+// Carousels
+@import (less) "components/resultsCovers.less";
+@import (less) "components/coverMagic.less";
+@import (less) "components/buttonCta.less";
+
 // Chart
 @import (less) "components/chart.less";
 
