--- a/static/css/legacy.less
+++ b/static/css/legacy.less
@@ -648,7 +648,6 @@ span {
     font-weight: normal !important;
     font-family: "Lucida Grande",Verdana,Helvetica,Geneva,sans-serif;
     color: @brown;
-    white-space: nowrap;
     padding: 5px 5px 0 5px;
   }
   &.caption {
@@ -833,6 +832,20 @@ input {
 
 /* LAYOUT */
 @import "v2.less";
+// Legacy V2 CSS
+// This block can hopefully be removed or cleaned up and moved to v2.less
+// when div#contentMeta selectors have been removed from this file or
+// this selector has moved to a page specific entry point.
+#test-body-mobile {
+  div.contentWide,
+  div#contentMeta {
+    width: 100%;
+    float: none;
+    // These elements are likely to have padding.
+    box-sizing: border-box;
+  }
+}
+
 
 div#placement {
   width: 960px;
@@ -4524,6 +4537,7 @@ ul#myreads-paginator {
   }
 
   @import (less) "components/desktop/iaBar.less";
+  @import (less) "components/chart--desktop.less";
   @import (less) "components/desktop/editions.less";
   @import (less) "components/desktop/form.olform.less";
   @import (less) "components/desktop/header-bar.less";
