--- a/openlibrary/templates/site/footer.html
+++ b/openlibrary/templates/site/footer.html
@@ -21,8 +21,13 @@ $if bodyid == 'user' or 'admin':
         window.addEventListener('DOMContentLoaded', function send_analytics_pageview() {
             archive_analytics.send_pageview({});
         });
+        if ( window.gradeA ) {
+            var script = document.createElement( 'script' );
+            script.src = "$static_url('build/all.js')";
+            script.type = 'text/javascript';
+            document.body.appendChild( script );
+        }
         </script>
-        <script src="$static_url('build/all.js')" type="text/javascript"></script>
 
         $if query_param("_firebug") == "true":
             <script type='text/javascript' src='http://getfirebug.com/releases/lite/1.2/firebug-lite-compressed.js'></script>
@@ -34,12 +39,14 @@ $if bodyid == 'user' or 'admin':
 
     <!-- clear the window.q and setup the jQuery plugins -->
     <script>
-    \$( function () {
-        var i;
-        for ( i = 0; i < window.q.length; i++ ) {
-            \$( window.q[i] );
-        }
-        window.q = [];
-    } );
+    if ( window.gradeA ) {
+        \$( function () {
+            var i;
+            for ( i = 0; i < window.q.length; i++ ) {
+                \$( window.q[i] );
+            }
+            window.q = [];
+        } );
+    }
     </script>
 </html>
