Some jQuery UI styles moved to JS stylesheet
These are not needed for the first render so can be delayed
until later.

--- a/static/css/js-all.less
+++ b/static/css/js-all.less
@@ -8,6 +8,7 @@
 @import (less) 'less/index.less';
 
 @import (less) 'legacy-datatables.less';
+@import (less) 'legacy-jquery-ui.less';
 
 @import (less) 'components/carousel--js.less';
 @import (less) 'components/header-bar--js.less';
