coverEbook styles moved to JS stylesheet
These are not needed on the critical path.

--- a/static/css/legacy.less
+++ b/static/css/legacy.less
@@ -1563,20 +1563,7 @@ div#searchResults {
   }
 }
 
-.coverEbook {
-  img {
-    opacity: .85;
-    filter: alpha(opacity=85);
-  }
-  a.cta-btn {
-    position: absolute;
-    padding: 0 5px;
-    right: 0;
-    bottom: 3px;
-    border-radius: 3px;
-  }
-}
-
+// openlibrary/plugins/openlibrary/js/availability.js
 .borrow_ {
   &available {
     background-color: @primary-blue;
@@ -2302,13 +2289,7 @@ div#history {
   }
 }
 
-.coverMagic {
-  .coverEbook {
-    cursor: pointer;
-    z-index: @z-index-level-6;
-  }
-}
-
+// unused?
 #contentLists {
   &.results {
     .coverMagic {
