Fix reveal of translation information
I don't like having these events hidden in the templates but I'm
not quite sure how to generalise this code right now.

The `hidden` class now applies !important so needs to be removed
when ever doing this fadeIn/out programmatically.

Fixes: #1892

--- a/openlibrary/templates/books/edit/edition.html
+++ b/openlibrary/templates/books/edit/edition.html
@@ -383,7 +383,7 @@ window.q.push(function() {
                     <label for="is-translation">$_("No")</label>
                 </div>
                 <div class="input">
-                    <input type="radio" name="edition--translation" id="is-translation2" value="yes" $checked_yes onclick="\$('.transYes').customFadeIn();"/>
+                    <input type="radio" name="edition--translation" id="is-translation2" value="yes" $checked_yes onclick="\$('.transYes').removeClass('hidden').customFadeIn();"/>
                     <label for="is-translation2">$_("Yes, it's a translation")</label>
                 </div>
 
